# snake-ai-genetic-algorithm-v2

./: .gitmodules  README.md  pyproject.toml
snake_ai/: main.py  playback.py  player.py  settings.py  simulator.py
